test/errors/type/collections/set/__gt2.yasl
echo mt.lookup(collections.set(), .__gt)(1, collections.set())
